--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Be my valentine 💕</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="shortcut icon" href="heat-icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="heart-icon.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
     <style>
